--- a/.github/workflows/update_readme_summary.yml
+++ b/.github/workflows/update_readme_summary.yml
@@ -20,7 +20,6 @@ jobs:
         run: |
           import pathlib, re
 
-          # Define paths and icons for the summary
           folders = {
               "Finite Automata": "automata/fa",
               "Pushdown Automata": "automata/pda",
@@ -38,7 +37,7 @@ jobs:
           readme_path = pathlib.Path("README.md")
           content = readme_path.read_text()
 
-          # Replace content between placeholders
+          # Replace content between architectural placeholders
           updated_content = re.sub(
               r".*?",
               f"\n{new_table}\n",
