--- a/.github/workflows/update_changelog.yml
+++ b/.github/workflows/update_changelog.yml
@@ -18,8 +18,9 @@ jobs:
         with:
           fetch-depth: 2 
 
+      # FIXED: Added shell: python to handle the import statements
       - name: Identify New Machines
-        shell: python # CRITICAL: This must be here to run Python code
+        shell: python
         run: |
           import subprocess, datetime, pathlib, json
           
@@ -38,20 +39,19 @@ jobs:
           for f in added_files:
               try:
                   data = json.loads(pathlib.Path(f).read_text())
-                  log_entries.append(f"Added **{data.get('title', f)}** ({data.get('type', 'FA')})")
+                  log_entries.append(f"Imported **{data.get('title', f)}** into {data.get('type', 'FA')} Library")
               except: continue
 
           if log_entries:
               date_str = datetime.datetime.now().strftime("%Y-%m-%d")
               cl_path = pathlib.Path("CHANGELOG.md")
-              header = f"## [{date_str}] - New Machines\n"
+              header = f"## [{date_str}] - Data Ingestion\n"
               entry = "- " + "\n- ".join(log_entries) + "\n\n"
               
               old_content = cl_path.read_text() if cl_path.exists() else ""
               cl_path.write_text(header + entry + old_content)
 
       - name: Commit log
-        # No 'shell: python' here because these are standard Git commands
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
