--- a/.github/workflows/auto_repair.yml
+++ b/.github/workflows/auto_repair.yml
@@ -1,12 +1,19 @@
-name: 🛠️ Auto-Repair Secrets
+name: Auto-Repair Secrets
 
-on: [push]
+on:
+  workflow_dispatch:
+  push:
+    branches: [main]
+    paths:
+      - ".github/scripts/lazy_fix.py"
+      - ".github/workflows/auto_repair.yml"
 
 permissions:
   contents: write
 
 jobs:
   fix-secrets:
+    if: github.actor != 'github-actions[bot]'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -15,7 +22,7 @@ jobs:
       - name: Install Python & Crypto Libs
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: "3.x"
       - run: pip install requests pynacl
 
       - name: Run Lazy Fixer
@@ -31,6 +38,6 @@ jobs:
           git config --global user.email "bot@noreply.github.com"
           if [[ `git status --porcelain` ]]; then
             git add .
-            git commit -m "🔒 Security: Moved exposed secrets to GitHub Settings"
+            git commit -m "security: moved exposed secrets to GitHub settings [skip ci]"
             git push
           fi
