--- a/.github/workflows/generate_preview.yml
+++ b/.github/workflows/generate_preview.yml
@@ -2,12 +2,14 @@ name: Generate Machine Preview
 
 on:
   push:
+    branches: [main]
     paths:
       - "automata/**"
       - "!PREVIEW.md" # Prevent documentation recursion
 
 jobs:
   visualize:
+    if: github.actor != 'github-actions[bot]'
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -75,5 +77,5 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add PREVIEW.md
-          git commit -m "Docs: Update machine preview and transition table" || echo "No changes"
+          git commit -m "docs: update machine preview [skip ci]" || echo "No changes"
           git push
