--- a/.github/workflows/update_changelog.yml
+++ b/.github/workflows/update_changelog.yml
@@ -2,12 +2,14 @@ name: Update Changelog
 
 on:
   push:
+    branches: [main]
     paths:
       - "automata/**"
       - "!CHANGELOG.md"
 
 jobs:
   log:
+    if: github.actor != 'github-actions[bot]'
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -56,5 +58,5 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add CHANGELOG.md
-          git commit -m "Docs: Automated Changelog Update" || echo "No log changes"
+          git commit -m "docs: automated changelog update [skip ci]" || echo "No log changes"
           git push
